[tool.poetry]
name = "downloader"
version = "0.1.0"
description = ""
authors = ["littlepiggeon <xiezichen2023@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
